--- a/mario-examples/style.css
+++ b/mario-examples/style.css
@@ -48,17 +48,69 @@ body {
   top: -40px;
   left: 0px;
 
+  animation-name: drive, jump;
+  animation-duration: 5s, 1s;
+  animation-delay: 0s, 7s;
+  animation-timing-function: initial;
+  animation-fill-mode: both;
+  animation-iteration-count: 2, 1;
+  /* animation-direction: alternate-reverse; */
+}
+.luigi {
+  position: absolute;
+  top: 100px;
+  left: 0;
+
   animation-name: drive;
-  animation-duration: 3s;
-  animation-timing-function: 2s;
+  animation-duration: 5s;
+  animation-timing-function: ease;
+  animation-fill-mode: both;
+  animation-iteration-count: 2;
+  animation-direction: alternate;
+}
+
+.cloud {
+  position: absolute;
+}
+.cloud:nth-child(1) {
+  top: 120px;
+  width: 200px;
+  opacity: 0.5;
+  animation: wind 20s linear 0s 5 normal both;
+}
+.cloud:nth-child(2) {
+  animation: wind 7s linear 3s 10 normal both;
 }
 
 /*// KEYFRAMES //*/
 @keyframes drive {
   from {
-    /* transform: translateX(0px); */
+    transform: translateX(100px);
+    background-color: rgba(200, 200, 255, 0.7);
   }
   to {
     transform: translateX(550px);
+    background-color: rgba(200, 255, 200, 0.3);
+  }
+}
+
+@keyframes jump {
+  0% {
+    top: -40px;
+  }
+  50% {
+    top: -100px;
+  }
+  100% {
+    top: -40px;
+  }
+}
+
+@keyframes wind {
+  from {
+    left: -300px;
+  }
+  to {
+    left: 90%;
   }
 }
